- Добавлены тесты для всех сервисов - Добавлены тесты для SpecificationFactory и JwtUtils - Исправлены проблемы в существующих CustomerServiceTest и EmailServiceTest - Добавлен TestSecurityConfig для тестовой среды - Обновлена тестовая конфигурация с JWT свойствами